# rust-microsoft-cookbook

./: .gitignore  README.md  clean_target.sh  mytabledefinition.json  playground_mongodb.rs  test.rs
async-tokio/mongodb-stream/: Cargo.toml
async-tokio/mongodb-stream/src/: core.rs  corev1.rs  corev2.rs  error.rs  libs.rs  main.rs
aws_lambda/aurora-dsql/: Cargo.toml  event.json
aws_lambda/aurora-dsql-insert/: Cargo.toml
aws_lambda/aurora-dsql-insert/src/: main.rs
aws_lambda/aurora-dsql/src/: http_handler.rs
aws_lambda/aurora-manager/: Cargo.toml
aws_lambda/aurora-manager/src/: main.rs
aws_lambda/bedrock/: Cargo.toml
aws_lambda/bedrock/src/: main.rs
aws_lambda/bedrock_prompt/: Cargo.toml  README.md  event.json
aws_lambda/bedrock_prompt/src/: http_handler.rs
aws_lambda/dsql-aurora-base/: Cargo.toml  README.md
aws_lambda/dsql-aurora-base/src/: http_handler.rs
aws_lambda/dsql-aurora-create/: Cargo.toml  README.md
aws_lambda/dsql-aurora-create/src/: http_handler.rs
aws_lambda/gemini-telegram/: Cargo.toml  README.md  event_doc.json  event_doc_large.json  event_epub.json  event_new.json  event_text.json  event_text_next.json  event_text_r.json
aws_lambda/gemini-telegram/src/: http_handler.rs
aws_lambda/gemini-telegram/src/http_handler/: chat.rs  embed.rs  errors.rs  gemini_api.rs  gen_config.rs  libs.rs  requests.rs  stream.rs  telegram_bot.rs  utils.rs
aws_lambda/gemini-web-search/: Cargo.toml  README.md  event.json
aws_lambda/gemini-web-search/src/http_handler/: gemini_op.rs
aws_lambda/grok-app/: Cargo.toml  README.md  event text.json  event.json  event_location.json  event_voice.json
aws_lambda/grok-app/src/: http_handler.rs  main.rs
aws_lambda/grok-app/src/http_handler/: grok_api.rs  system_bot.rs
aws_lambda/s3-table-clap/: Cargo.toml  dataset.csv  note.md  s3t_template.yaml
aws_lambda/s3-table-clap/pyiceberg-docker/: Dockerfile  docker-compose.yml  env-example.txt  main.py
aws_lambda/s3-table-clap/src/: athena.rs  build.rs  clap.rs  compatible.rs  error.rs  generate_data.rs  main-backup.rs  main-backupvv.rs  main.rs  table_manager.rs  utils.rs
aws_lambda/s3-table-clap/src/compatible/: error.rs  (+2 more)
aws_lambda/s3-table-clap/templates/: flight_data.yaml  table_template.yaml  world_cup.yaml
aws_lambda/secret_manag/: Cargo.toml
aws_lambda/secret_manag/src/: main.rs
aws_lambda/tbucket/: Cargo.toml  README.md  set-env.sh
aws_lambda/tbucket/pyiceberg-docker/: requirements.txt
aws_lambda/tbucket/src/: athena.rs  error.rs  main.rs  utils.rs
aws_lambda/tbucket/templates/: flights.yaml
datadog/ddtrace/: Cargo.toml
datadog/ddtrace/examples/: ddtrace_llm.rs
datadog/ddtrace/src/: constants.rs  error.rs  lib.rs  llmobs.rs  utills.rs
datadog/glommio-start/: Cargo.toml
datadog/glommio-start/src/: main.rs
datadog/open_telemetry/: Cargo.toml  README.md
datadog/open_telemetry/src/: main.rs  mix_data.rs
examples/jwt-manage/: Cargo.toml
examples/jwt-manage/src/: main.rs
gemini-bot-lambda-hyper/: Cargo.toml  event.json  event2.json  event3.json  event4.json  notes.txt
gemini-bot-lambda-hyper/src/: bot.rs  data  gemini.rs  main.rs  mongodb.rs
gemini-bot-lambda-v2/: Cargo.toml  README.md  checkenv.sh  event.json  input.txt
gemini-bot-lambda-v2/src/: http_handler.rs
gemini-bot-lambda-v2/src/http_handler/: bot.rs  gemini_lib.rs  mongodb_lib.rs  telegram_bot.rs
gemini-bot-lambda-v3/: Cargo.toml  Makefile  README copy.md  README.md  event.json  medical_inf49334.json  samconfig.toml  template.yaml
gemini-bot-lambda-v3/.aws-sam/: build.toml
gemini-bot-lambda-v3/events/: event.json  medical_inf.json  medical_inf2.json  medical_inf3.json  medical_inf4.json  medical_inf49334.json  medical_inf5.json
gemini-bot-lambda-v3/rust_app/: Cargo.toml
gemini-bot-lambda-v3/rust_app/src/: event_handler.rs  gemini.rs  libs.rs  main.rs  mongodb.rs
gemini-bot-lambda-v3/src/: event_handler.rs  libs.rs  llmerror.rs  main.rs
gemini-bot-lambda-v3/src/gemini/: chat.rs  requests.rs  utils.rs
gemini-bot-lambda-v3/src/mongodb/: connect.rs
hackathon-mongodb/: Cargo.toml  README.md  event.json
hackathon-mongodb/src/: http_handler.rs  main.rs
hackathon-mongodb/src/http_handler/: mongodb_op.rs
http-api/cohere-embed/: Cargo.toml  output.json  output_image.json  text3.txt
http-api/cohere-embed/src/: main.rs
http-api/mistral-mongodb/: Cargo.toml
http-api/mistral-mongodb/src/: main.rs
http-api/mistral-travel-app/: Cargo.toml
http-api/mistral-travel-app/src/: main.rs
langchain-project/langchain/: Cargo.toml  README.md  gemini_find_brands.rs  system_prompt.md
langchain-project/langchain/examples/: agent_test.rs  anthropic_base.rs  anthropic_code_execution.rs  anthropic_complex.rs  anthropic_embed.rs  anthropic_embedm.rs  anthropic_embedr.rs  anthropic_function_gsp.rs  anthropic_function_gw.rs  anthropic_function_price.rs  anthropic_function_sequential.rs  anthropic_function_weather.rs  anthropic_image.rs  anthropic_json_image.rs  anthropic_json_mode.rs  anthropic_web_scraping.rs  assembly_base.rs  assembly_get_transcript.rs  assembly_list.rs  comp_azure_base.rs  comp_baseten_base.rs  comp_deeps_base.rs  comp_deeps_qwst.rs  comp_deeps_r1.rs  comp_deeps_stream.rs  comp_nvidiar1.rs  comp_nvidiar1_mt.rs  comp_qwen_base.rs  comp_qwen_stream.rs  comp_replicate_base.rs  comp_replicate_generate_image.rs  comp_replicate_image.rs  comp_xai_airports.rs  comp_xai_base.rs  comp_xai_deferred.rs  comp_xai_functions.rs  comp_xai_get_models.rs  comp_xai_image.rs  comp_xai_medical_data.rs  comp_xai_multiple_turns.rs  (+53 more)
langchain-project/langchain/src/: agents.rs  anthropic.rs  assembly.rs  compatible.rs  gemini.rs  groc.rs  langsmith.rs  lib.rs  llmerror.rs  openai.rs  replicate.rs  xai.rs
langchain-project/langchain/tests/: anthropic_test.rs  gemini_test.rs  openai_test.rs
open_telemetry/: Cargo.toml  README.md
open_telemetry/src/: main.rs
polars-samples/: Cargo.toml  data.csv  fa_articles.csv
polars-samples/src/: main.rs
rusty-journal/: Cargo.toml  README.md  test-journal.json
rusty-journal/src/: cli.rs  main.rs  tasks.rs
(+559 files in other folders)
