[package]
name = "gemini-bot-lambda"
version = "0.2.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.13.0"
mongodb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
] }

tokio = { version = "1", features = ["full"] }

[package.metadata.lambda.deploy]
memory = 128                                    # Function's memory
timeout = 90                                    # Function's execution timeout
tracing = "active"                              # Tracing mode
tags = { "appName" = "Gemini-Barista-Bot" }     # List of AWS resource tags for this function