[package]
name = "gemini-bot-lambda-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
mongodb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
] }

tokio = { version = "1", features = ["macros"] }
rand = "0.8.5"

[package.metadata.lambda.deploy]
memory = 128                                    # Function's memory
timeout = 90                                    # Function's execution timeout
tracing = "active"                              # Tracing mode
tags = { "appName" = "Gemini-Barista-Bot" }     # List of AWS resource tags for this function
