[package]
name = "hackathon-mongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
mongodb = "3.1.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.53.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.3"

tokio = { version = "1", features = ["macros"] }
