[package]
name = "open_telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.29", features = ["full"] }
rand = { version = "0.8" }
opentelemetry = "0.27.1"
opentelemetry_sdk = "0.27.1"
opentelemetry-stdout = { version = "0.27.0", features = ["trace"] }

