[package]
name = "polars-samples"
version = "0.1.0"
edition = "2021"

[dependencies]
# polars = { version = "0.42.0", features = ["lazy", "csv", "json", "parquet", "strings", "regex", "cov", "serde"] }
polars = { version = "0.42.0", features = ["lazy", "csv", "strings", "regex", "cov", "serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"] }

