[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = "thin"

[dependencies]
home = "0.5"
anyhow = "1.0"
structopt = "0.3.26"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"