[package]
name = "mongodb-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "3.2.2"
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-smithy-types = "1.3.0"
aws-smithy-runtime-api = "1.7.4"
aws-sdk-s3 = "1.78.0"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
rayon = "1.10.0"

tokio = { version = "1.44.1", features = ["full"] }
thiserror = "2.0.12"
