[package]
name = "aurora-dsql"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
aws-config = "1.5.10"
aws-sdk-dsql = "1.0.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" , "postgres"] }
anyhow = "1.0.94"
rand = "0.8.5"
uuid = { version = "1.11.0", features = [ "v4" ] }

tokio = { version = "1", features = ["macros"] }