[package]
name = "bedrock_prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.10"
aws-sdk-bedrockruntime = { version = "1.63.0", features = ["behavior-version-latest"] }
aws-sdk-bedrockagent = "1.66.0"
lambda_http = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

tokio = { version = "1", features = ["macros"] }
