[package]
name = "dsql-aurora-base"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dsql = "1.9.0"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
lambda_http = "0.14.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-rustls" , "postgres", "uuid", "bigdecimal", "time" ] }
uuid = { version = "1.13.2", features = ["v4"] }
rand = "0.9.0"

tokio = { version = "1.43", features = ["macros"] }
anyhow = "1.0.95"
bigdecimal = "0.4.7"

