[package]
name = "gemini-web-search"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json"
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

tokio = { version = "1", features = ["macros"] }
