[package]
name = "grok-app"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
lambda_http = "0.13.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream"
] }
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3"

tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.133"
base64 = "0.22.1"
