[package]
name = "secret_manag"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.13.0"
aws-sdk-secretsmanager = "1.50.0"
aws-config = "1.5.8"
serde_json = "1.0.129"

tokio = { version = "1", features = ["macros"] }
serde = "1.0.210"

