[package]
name = "tbucket"
version = "0.1.5"
edition = "2021"

[dependencies]
aws-sdk-s3tables = "1.13.0"
aws-sdk-athena = "1.66.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
colored = "3.0.0"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
clap = { version = "4.5.32", features = ["derive"] }
csv-async = "1.2"
thiserror = "2.0.11"
futures = "0.3"
async-stream = "0.3.6"
base64 = "0.22.1"
rand = "0.9.0"
chrono = "0.4.40"
envy = "0.4.2"
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3.31"

tokio = { version = "1", features = ["full"] }





