[package]
name = "ddtrace"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
] }
env_logger = "0.11.6"
log = "0.4.25"
thiserror = "2.0.11"

tokio = { version = "1", features = ["full"] }
