[package]
name = "open_telemetry"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run mix
name = "mix"
path = "src/mix_data.rs"
doc = false

[dependencies]
opentelemetry = { version = "0.28", features = ["metrics"] }
opentelemetry_sdk = { version = "0.28", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.28.0", features = ["metrics", "trace"] }

reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde_json = "1.0"

tokio = { version = "1.29", features = ["full"] }
