[package]
name = "jwt-manage"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.1"

tokio = { version = "1.0", features = ["full"] } # Necesario para async/await
