[package]
name = "mistral-mongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
] }
mongodb = "3.1.0"

tokio = {version = "1.32.0", features = ["full"]}