[package]
name = "langchain"
version = "0.1.0"
edition = "2021"

[lib]
name = "langchain"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.21"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
thiserror = "2.0.11"
futures = "0.3"
async-stream = "0.3.6"
tokio = { version = "1.42.0", features = ["full"] }
base64 = "0.22.1"
